subida de archivos

--- a/miusuario.html
+++ b/miusuario.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Desafio SASS/css/desafio.css">
+    <link rel="stylesheet" href="/Desafio SASS/css/miusuario.css">
     <link rel="shortcut icon" href="gtlogo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
-    <title>Contacto</title>
+    <title>Usuario</title>
 </head>
 
 <body>
@@ -27,15 +27,16 @@
         </ul>
     </nav>
     <main>
-        <section class="ubicacion">
-            <h5>Mapa de ubicación</h5>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53086.09174603736!2d-117.92216713668466!3d33.73790003391115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcdb956c823085%3A0xc74f843a1f1efdbc!2sSanta%20Ana%2C%20California%2C%20EE.%20UU.!5e0!3m2!1ses!2sco!4v1642200771767!5m2!1ses!2sco"
-                width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            <p><a href="">3770 W McFadden Ave, Santa Ana, CA 92704, USA</a></p>
-            <p><a href="">Telefono: 3506333129</a></p>
-            <p><a href="https://www.instagram.com/gtbicycles/?hl=es" target="_blank">Instagram</a></p>
-            <p><a href="https://es-la.facebook.com/GTBicycles/" target="_blank">Facebook</a></p>
+        <section class="form-register">
+            <h4>Formulario de Registro</h4>
+            <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su nombre">
+            <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese su apellido">
+            <input class="controls" type="text" name="correo" id="correo" placeholder="Ingrese su correo">
+            <input class="controls" type="password" name="contraseña" id="contraseña"
+                placeholder="Ingrese su contraseña">
+            <p>Estoy de acuerdo con los <a href="#"> Terminos y condiciones</a></p>
+            <input class="botons" type="submit" value="Registrar">
+            <p><a href="#">¿Ya tengo cuenta?</a> </p>
         </section>
     </main>
     <footer>Juan Sandoval. Todos los derechos reservados 2022</Footer>
